tests/whole_screen/snapshots/whole_screen__a_call_that_changed_a_file_in_colour.snap
---
source: tests/whole_screen/main.rs
expression: window.picture_in_colour()
---
80x24 cursor 21,4 scrolled 0
|│ Tips                                                                        ││|
  1..1 fg=38;5;30
  3..6 bold fg=38;5;30
  79..79 fg=38;5;30
  80..80 fg=90
|│                                                                             ││|
  1..1 fg=38;5;30
  79..79 fg=38;5;30
  80..80 fg=90
|│ · /          opens the command list                                         ││|
  1..1 fg=38;5;30
  3..3 fg=90
  5..5 fg=38;5;30
  79..79 fg=38;5;30
  80..80 fg=90
|│ · \ enter    adds a line without sending                                    ││|
  1..1 fg=38;5;30
  3..3 fg=90
  5..11 fg=38;5;30
  79..79 fg=38;5;30
  80..80 fg=90
|│ · shift+tab  steps the permission mode                                      ││|
  1..1 fg=38;5;30
  3..3 fg=90
  5..13 fg=38;5;30
  79..79 fg=38;5;30
  80..80 fg=90
|│ · ctrl+c     clears the line typed so far                                   ││|
  1..1 fg=38;5;30
  3..3 fg=90
  5..10 fg=38;5;30
  79..79 fg=38;5;30
  80..80 fg=90
|╰─────────────────────────────────────────────────────────────────────────────╯┃|
  1..80 fg=38;5;30
|                                                                               ┃|
  80..80 fg=38;5;30
|› rename that comment                                                          ┃|
  1..79 bg=48;5;234
  80..80 fg=38;5;30
|                                                                               ┃|
  80..80 fg=38;5;30
|● Edit(release.yml)                                                            ┃|
  3..6 bold
  7..19 fg=90
  80..80 fg=38;5;30
|  ⎿ Added 1 line, removed 1 line                                               ●|
  3..10 fg=90
  11..11 bold
  12..26 fg=90
  27..27 bold
  28..32 fg=90
  80..80 fg=38;5;30
|        1 -  # trend data                                                      ┃|
  6..13 fg=38;5;210 bg=48;5;52
  14..79 fg=38;5;224 bg=48;5;52
  80..80 fg=38;5;30
|        1 +  # what stops a tag                                                ┃|
  6..13 fg=38;5;114 bg=48;5;22
  14..79 fg=38;5;194 bg=48;5;22
  80..80 fg=38;5;30
|        2    budgets:                                                          ┃|
  6..13 fg=90
  80..80 fg=38;5;30
|        3      name: release budgets                                           ┃|
  6..13 fg=90
  80..80 fg=38;5;30
|                                                                               ┃|
  80..80 fg=38;5;30
|Renamed. Nothing else in the file moved.                                       ┃|
  80..80 fg=38;5;30
|                                                                                |
|                                                                 99% window left|
  1..80 fg=90
|╭──────────────────────────────────────────────────────────────────────────────╮|
  1..80 fg=90
|│ ›                                                                            │|
  1..1 fg=90
  3..3 fg=38;5;30
  80..80 fg=90
|╰──────────────────────────────────────────────────────────────────────────────╯|
  1..80 fg=90
|ask mode on (shift+tab to cycle)                       anthropic · claude-test-1|
  1..32 fg=90
  56..80 fg=90
