tests/whole_screen/snapshots/whole_screen__a_click_on_a_scroll_rail_mark_lands_on_the_prompt_it_marks.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x16 cursor 13,4 scrolled 0
|› say it again                                                                 │|
|                                                                               │|
|the quick brown fox jumps over the lazy dog. the quick brown fox jumps over the•|
|lazy dog. the quick brown fox jumps over the lazy dog. the quick brown fox     │|
|jumps over the lazy dog. the quick brown fox jumps over the lazy dog. the quick│|
|brown fox jumps over the lazy dog. the quick brown fox jumps over the lazy dog.│|
|the quick brown fox jumps over the lazy dog. the quick brown fox jumps over the●|
|lazy dog. the quick brown fox jumps over the lazy dog. the quick brown fox     ┃|
|jumps over the lazy dog. the quick brown fox jumps over the lazy dog. the quick│|
|brown fox jumps over the lazy dog. the quick brown fox jumps over the lazy dog.│|
|                                                                                |
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                       anthropic · claude-test-1|
