tests/whole_screen/snapshots/whole_screen__a_click_on_the_scroll_rail_in_a_narrow_window_scrolls_back_to_it.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
40x16 cursor 13,4 scrolled 0
|lazy dog. the quick brown fox jumps    •|
|over the lazy dog. the quick brown fox │|
|jumps over the lazy dog. the quick     │|
|brown fox jumps over the lazy dog. the │|
|quick brown fox jumps over the lazy    ┃|
|dog. the quick brown fox jumps over the•|
|lazy dog. the quick brown fox jumps    │|
|over the lazy dog. the quick brown fox │|
|jumps over the lazy dog. the quick     │|
|brown fox jumps over the lazy dog.     │|
|                                        |
|                         99% window left|
|╭──────────────────────────────────────╮|
|│ ›                                    │|
|╰──────────────────────────────────────╯|
|ask mode on    anthropic · claude-test-1|
