tests/whole_screen/snapshots/whole_screen__a_command_that_cannot_run_mid_turn_says_so_on_a_panel.snap
---
source: tests/whole_screen/main.rs
assertion_line: 499
expression: window.picture()
---
60x24 cursor 23,0 scrolled 0
|│ No recent sessions                                      ││|
|│                                                         ││|
|│ ─────────────────────────────────────────────────────── ││|
|│                                                         ││|
|│ Tips                                                    ││|
|│                                                         │┃|
|│ · /          opens the command list                     │┃|
|│ · \ enter    adds a line without sending                │┃|
|│ · shift+tab  steps the permission mode                  │┃|
|│ · ctrl+c     clears the line typed so far               │┃|
|╰─────────────────────────────────────────────────────────╯┃|
|                                                           ┃|
|› start it                                                 ┃|
|                                                           ┃|
|● Bash(sleep 30)                                           ┃|
|  ⎿ (no output yet) (+2 lines · ctrl+o to expand)          ┃|
|                                                           ┃|
|It is started. That is all.                                ┃|
|────────────────────────────────────────────────────────────|
|                                                            |
|/logout                                                     |
|removes the key the request now in flight is signed with    |
|                                                            |
|esc to close                                                |
