tests/whole_screen/snapshots/whole_screen__a_key_given_to_login_is_what_the_turn_after_it_is_sent_with.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x24 cursor 21,4 scrolled 0
|│ · \ enter    adds a line without sending                                    ││|
|│ · shift+tab  steps the permission mode                                      ││|
|│ · ctrl+c     clears the line typed so far                                   ││|
|╰─────────────────────────────────────────────────────────────────────────────╯│|
|                                                                               │|
|                                                                               │|
|Warning: No models available. Use /login or set an API key environment         │|
|variable. Then use /model to select a model.                                   ┃|
|                                                                               ┃|
|› /login anthropic                                                             ┃|
|⎿ login successful; choose a model with /model                                 ┃|
|                                                                               ┃|
|› /model claude-test-1                                                         ┃|
|⎿ anthropic · claude-test-1                                                    ┃|
|                                                                               ┃|
|› what is 2+2                                                                  ┃|
|                                                                               ●|
|Two plus two is four.                                                          ┃|
|                                                                                |
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                       anthropic · claude-test-1|
