tests/whole_screen/snapshots/whole_screen__a_key_that_cannot_be_written_down_is_said_without_a_path.snap
---
source: tests/whole_screen/main.rs
expression: picture
---
80x24 cursor 21,4 scrolled 0
|│ ─────────────────────────────────────────────────────────────────────────── ││|
|│                                                                             ││|
|│ Tips                                                                        ││|
|│                                                                             ││|
|│ · /          opens the command list                                         ││|
|│ · \ enter    adds a line without sending                                    ││|
|│ · shift+tab  steps the permission mode                                      │┃|
|│ · ctrl+c     clears the line typed so far                                   │┃|
|╰─────────────────────────────────────────────────────────────────────────────╯┃|
|                                                                               ┃|
|                                                                               ┃|
|Warning: No models available. Use /login or set an API key environment         ┃|
|variable. Then use /model to select a model.                                   ┃|
|                                                                               ┃|
|› /login                                                                       ┃|
|⎿ ! the key could not be saved — crucible cannot write its login store; try    ●|
|  /login again after fixing the permissions                                    ┃|
|                                                                               ┃|
|                                                                                |
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                                                |
