tests/whole_screen/snapshots/whole_screen__a_line_past_what_the_box_has_room_for_scrolls_inside_it.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x16 cursor 14,34 scrolled 0
|│ · ctrl+c     clears the line typed so far                                   ││|
|╰─────────────────────────────────────────────────────────────────────────────╯│|
|                                                                               │|
|                                                                               │|
|Warning: No models available. Use /login or set an API key environment         ┃|
|variable. Then use /model to select a model.                                   ┃|
|                                                                               ┃|
|                                                                                |
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›  dog. the quick brown fox jumps over the lazy dog. the quick brown fox     │|
|│   jumps over the lazy dog. the quick brown fox jumps over the lazy dog. the  │|
|│   quick brown fox jumps over the lazy dog. the quick brown fox jumps over    │|
|│   the lazy dog. the quick brown fox jumps over the lazy dog. the quick brown │|
|│    fox jumps over the lazy dog.                                              │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
