tests/whole_screen/snapshots/whole_screen__a_mistyped_command_is_refused_the_same_way_in_a_narrow_window.snap
---
source: tests/whole_screen/main.rs
expression: refused_as_a_slip(&mut window)
---
40x24 cursor 21,4 scrolled 0
|CRUCIBLE                                |
|/…/workspace                            |
|                                        |
|                                        |
|Warning: No models available. Use       |
|/login or set an API key environment    |
|variable. Then use /model to select a   |
|model.                                  |
|                                        |
|› /modle                                |
|⎿ ! no such command: /modle             |
|    nearest: /model, /mode              |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|╭──────────────────────────────────────╮|
|│ ›                                    │|
|╰──────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)        |
